syntax = "proto3";

package ratings;

option go_package = "proto/gen";

import "google/protobuf/timestamp.proto";

service Service {
  rpc GetAggregatedScores(AggregatedScoresRequest) returns (AggregatedScoresResponse);
}

message AggregatedScoresRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date   = 2;
}

message AggregatedScoresResponse {
  repeated Score scores = 1;
}

message Score {
  ScoreEnum type   = 1; 
  string value     = 2;
  int32 spelling   = 3;
  int32 grammar    = 4;
  int32 gdpr       = 5;
  int32 randomness = 6;
}

enum ScoreEnum {
  EMPTY   = 0;
  DAILY   = 1;
  WEEKLY  = 2;
  RATINGS = 3;
}
